--- a/elephant.html
+++ b/elephant.html
@@ -3,10 +3,8 @@
 
 <head>
     <title></title>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&amp;display=swap"
-        rel="stylesheet" />
-    <meta name="viewport"
-        content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&amp;display=swap" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <style type="text/css" media="screen"></style>
     <link rel="stylesheet" href="style.css">
 
@@ -14,17 +12,8 @@
 
 <body>
     <div class="box">
-        <div style="
-        text-align: center;
-        font-size: 7rem;
-        transform: skewY(-10deg);
-        color: floralwhite;
-        position: absolute;
-        top: 80%;
-        left: 26%;
-      ">
-            Good Luck
-        </div>
+        <div class="good-luck">insert text here</div>
+        <div class="message">Good luck elephant is here to wish you all the very best for</div>
         <div class="body-copy"></div>
         <div class="body"></div>
         <div class="ear"></div>
@@ -58,8 +47,11 @@
         <div class="tail-tip"></div>
         <div class="toe"></div>
         <div class="star2"></div>
-        <div class="heart">&#x2665;</div>
-
+        <div class="star3"></div>
+        <div class="star4"></div>
+        <div class="heart1">&#x2665;</div>
+        <div class="heart2">&#x2665;</div>
+        <div class="heart3">&#x2665;</div>
     </div>
 </body>
 
